# asm

./: .dockerignore  .gitignore  .justfile  Cargo.toml  rust-toolchain.toml
.cargo/: audit.toml  config.toml
.github/actions/prebuild-sp1-runner/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-sp1/: action.yml
.github/workflows/: cron-zizmor.yml  docs.yml  functional.yml  guest-build.yml  lint.yml  prover.yml  release.yml  security.yml  test-coverage.yml  unit.yml
crates/btc-verification/src/: body_verification.rs  inclusion_proof.rs
crates/common/src/: constants.rs  errors.rs  lib.rs  manifest.rs  mmr.rs  spec.rs  subprotocol.rs
crates/common/ssz/: state.ssz
crates/crypto/src/: lib.rs
crates/extensions/moho/storage/: Cargo.toml
crates/extensions/moho/storage/src/: export_entries.rs  lib.rs  moho_state.rs
crates/extensions/moho/storage/src/sled/: export_entries.rs  mod.rs  moho_state.rs
crates/extensions/moho/worker/: Cargo.toml
crates/extensions/moho/worker/src/: builder.rs  compute.rs  constants.rs  errors.rs  handle.rs  lib.rs  service.rs  state.rs  traits.rs
crates/extensions/prover/storage/: Cargo.toml
crates/extensions/prover/storage/src/: lib.rs  proof_db.rs  remote_mapping.rs  remote_status.rs
crates/extensions/prover/storage/src/sled/: mod.rs  proof_db.rs  remote_mapping.rs  remote_status.rs
crates/extensions/prover/worker/: Cargo.toml
crates/extensions/prover/worker/src/: builder.rs  config.rs  constants.rs  errors.rs  handle.rs  input.rs  lib.rs  message.rs  proof_store.rs  queue.rs  service.rs  state.rs  traits.rs
crates/extensions/prover/worker/src/backend/: mod.rs  native.rs  sp1.rs
crates/logs/: Cargo.toml
crates/logs/src/: asm_stf.rs  checkpoint.rs  constants.rs  deposit.rs  ee_predicate_update.rs  export.rs  lib.rs
crates/manifest-types/src/: hashes.rs  lib.rs  manifest.rs
crates/params/: Cargo.toml
crates/params/src/: lib.rs  params.rs
crates/params/src/subprotocols/: admin.rs  bridge.rs  mod.rs
crates/params/src/subprotocols/admin/: admin_tx.rs  config.rs  confirmation_depth.rs  mod.rs  roles.rs  updates.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: traits.rs
crates/storage/: Cargo.toml
crates/storage/src/: aux.rs  export_entries.rs  lib.rs  manifest.rs  manifest_mmr.rs  mmr.rs  state.rs
crates/storage/src/sled/: aux.rs  manifest.rs  manifest_mmr.rs  mod.rs  state.rs
crates/subprotocols/admin/subprotocol/: Cargo.toml
crates/subprotocols/admin/subprotocol/src/: authority.rs  error.rs  handler.rs  state.rs  subprotocol.rs
crates/subprotocols/admin/txs/: Cargo.toml
crates/subprotocols/admin/txs/src/: constants.rs  errors.rs  lib.rs  parser.rs  signing_message.rs
crates/subprotocols/admin/txs/src/actions/: cancel.rs  mod.rs  sighash.rs
crates/subprotocols/admin/txs/src/actions/updates/: alpen_admin_multisig.rs  asm_stf_vk.rs  defcon1.rs  defcon3.rs  ee_stf_vk.rs  mod.rs  multisig.rs  ol_stf_vk.rs  operator.rs  operator_set.rs  predicate.rs  render.rs  safe_harbour_address.rs  seq.rs  strata_admin_multisig.rs  strata_security_council_multisig.rs  strata_seq_manager_multisig.rs  strata_sequencer.rs
crates/subprotocols/admin/txs/src/test_utils/: mod.rs
crates/subprotocols/bridge-v1/msgs/: Cargo.toml
crates/subprotocols/bridge-v1/msgs/src/: lib.rs
crates/subprotocols/bridge-v1/subprotocol/: Cargo.toml
crates/subprotocols/bridge-v1/subprotocol/src/: errors.rs  handler.rs  lib.rs  subprotocol.rs  test_utils.rs
crates/subprotocols/bridge-v1/subprotocol/src/state/: assignment.rs  bridge.rs  deposit.rs  mod.rs  operator.rs
crates/subprotocols/bridge-v1/subprotocol/src/validation/: deposit.rs  slash.rs  unstake.rs  withdrawal_fulfillment.rs
crates/subprotocols/bridge-v1/txs/: Cargo.toml
crates/subprotocols/bridge-v1/txs/src/: errors.rs  parser.rs
crates/subprotocols/bridge-v1/txs/src/deposit/: info.rs  parse.rs
crates/subprotocols/bridge-v1/txs/src/deposit_request/: info.rs  parse.rs
crates/subprotocols/bridge-v1/txs/src/test_utils/: unstake.rs
crates/subprotocols/bridge-v1/txs/src/unstake/: info.rs  mod.rs  parse.rs  script.rs
crates/subprotocols/bridge-v1/types/: Cargo.toml
crates/subprotocols/bridge-v1/types/src/: lib.rs  operator.rs  safe_harbour.rs  withdrawal.rs
crates/subprotocols/checkpoint/subprotocol/: Cargo.toml
crates/subprotocols/checkpoint/subprotocol/src/: handler.rs  lib.rs  subprotocol.rs
crates/subprotocols/checkpoint/types/: Cargo.toml  build.rs
crates/subprotocols/checkpoint/types/src/: claim.rs  error.rs  lib.rs  log_payloads.rs  payload.rs  test_utils.rs
crates/subprotocols/checkpoint/types/ssz/: claim.ssz  payload.ssz
crates/subprotocols/checkpoint/verification/: Cargo.toml  build.rs
crates/subprotocols/checkpoint/verification/src/: deposit_pool.rs  errors.rs  lib.rs  state.rs  verification.rs
crates/subprotocols/checkpoint/verification/ssz/: state.ssz
crates/test-utils/checkpoint/: Cargo.toml
crates/test-utils/checkpoint/src/: lib.rs
crates/worker/: Cargo.toml
crates/worker/src/: aux_resolver.rs  builder.rs  errors.rs  handle.rs  lib.rs  message.rs  service.rs  state.rs  subscription.rs  sync.rs  test_utils.rs  traits.rs
docker/: README.md
docker/asm-runner/: Dockerfile
functional-tests/: README.md  run_test.sh
functional-tests/envs/: basic_env.py  prover_env.py
functional-tests/tests/: fn_asm_block_test.py  fn_asm_proof_reorg_restart_recovery_test.py  fn_asm_proof_restart_recovery_test.py  fn_asm_restart_test.py  fn_asm_safe_harbour_test.py  fn_asm_state_test.py
functional-tests/utils/: dbtool.py  utils.py
guest-builder/sp1/: Cargo.toml  build.rs
guest-builder/sp1/guest-asm/: Cargo.toml
guest-builder/sp1/guest-moho/: Cargo.toml
guest-builder/sp1/src/: lib.rs
params/: README.md  gen_asm_params.py
tests/: Cargo.toml  lib.rs
tests/asm/: admin.rs  admin_to_bridge.rs  admin_to_checkpoint.rs  admin_to_ee_stf.rs  admin_to_stf.rs  bridge.rs  bridge_to_checkpoint.rs  checkpoint.rs  core.rs
tests/harness/: admin.rs  bridge.rs  checkpoint.rs  mod.rs  test_harness.rs  worker_context.rs
(+32 files in other folders)
