[workspace]
resolver = "2"

members = [
  "crates/common",
  "crates/btc-verification",
  "crates/logs",
  "crates/manifest-types",
  "crates/params",
  "crates/proof/db",
  "crates/proof/statements",
  "crates/proof/types",
  "crates/rpc",
  "crates/spec",
  "crates/spec-debug",
  "crates/stf",
  "crates/subprotocols/admin/subprotocol",
  "crates/subprotocols/admin/txs",
  "crates/subprotocols/bridge-v1/subprotocol",
  "crates/subprotocols/bridge-v1/txs",
  "crates/subprotocols/bridge-v1/msgs",
  "crates/subprotocols/bridge-v1/types",
  "crates/subprotocols/checkpoint/subprotocol",
  "crates/subprotocols/checkpoint/txs",
  "crates/subprotocols/checkpoint/msgs",
  "crates/subprotocols/checkpoint/types",
  "crates/subprotocols/checkpoint/verification",
  "crates/subprotocols/debug-v1/subprotocol",
  "crates/subprotocols/txs-test-utils",
  "crates/test-utils/arb",
  "crates/test-utils/btc",
  "crates/test-utils/btcio",
  "crates/test-utils/checkpoint",
  "crates/worker",
  "crates/storage",

  # tests
  "tests",

  # binaries listed separately
  "bin/asm-runner",
  "bin/prover-perf",
  "guest-builder/sp1",
]

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_crate_dependencies = "deny"
rust.unused_must_use = "deny"
clippy.allow_attributes = "warn"
clippy.allow_attributes_without_reason = "warn"
clippy.absolute_paths = "warn"
rustdoc.all = "warn"

[workspace.dependencies]
# workspace crates
asm-storage = { path = "crates/storage" }
strata-ams-test-utils = { path = "crates/test-utils-btcio" }
strata-asm-common = { path = "crates/common" }
strata-asm-logs = { path = "crates/logs" }
strata-asm-manifest-types = { path = "crates/manifest-types" }
strata-asm-params = { path = "crates/params" }
strata-asm-proof-db = { path = "crates/proof/db" }
strata-asm-proof-impl = { path = "crates/proof/statements" }
strata-asm-proof-types = { path = "crates/proof/types" }
strata-asm-proto-admin = { path = "crates/subprotocols/admin/subprotocol" }
strata-asm-proto-admin-txs = { path = "crates/subprotocols/admin/txs" }
strata-asm-proto-bridge-v1 = { path = "crates/subprotocols/bridge-v1/subprotocol" }
strata-asm-proto-bridge-v1-msgs = { path = "crates/subprotocols/bridge-v1/msgs" }
strata-asm-proto-bridge-v1-txs = { path = "crates/subprotocols/bridge-v1/txs" }
strata-asm-proto-bridge-v1-types = { path = "crates/subprotocols/bridge-v1/types" }
strata-asm-proto-checkpoint = { path = "crates/subprotocols/checkpoint/subprotocol" }
strata-asm-proto-checkpoint-msgs = { path = "crates/subprotocols/checkpoint/msgs" }
strata-asm-proto-checkpoint-txs = { path = "crates/subprotocols/checkpoint/txs" }
strata-asm-proto-checkpoint-types = { path = "crates/subprotocols/checkpoint/types" }
strata-asm-proto-debug-v1 = { path = "crates/subprotocols/debug-v1/subprotocol" }
strata-asm-proto-txs-test-utils = { path = "crates/subprotocols/txs-test-utils" }
strata-asm-rpc = { path = "crates/rpc" }
strata-asm-spec = { path = "crates/spec" }
strata-asm-spec-debug = { path = "crates/spec-debug" }
strata-asm-stf = { path = "crates/stf" }
strata-asm-worker = { path = "crates/worker" }
strata-btc-verification = { path = "crates/btc-verification" }
strata-checkpoint-verification = { path = "crates/subprotocols/checkpoint/verification" }
strata-test-utils-arb = { path = "crates/test-utils/arb" }
strata-test-utils-btc = { path = "crates/test-utils/btc" }
strata-test-utils-btcio = { path = "crates/test-utils/btcio" }
strata-test-utils-checkpoint = { path = "crates/test-utils/checkpoint" }

# Dependencies from alpenlabs/moho
moho-recursive-proof = { git = "https://github.com/alpenlabs/moho", tag = "v0.1-alpha.7" }
moho-runtime-impl = { git = "https://github.com/alpenlabs/moho", tag = "v0.1-alpha.7" }
moho-runtime-interface = { git = "https://github.com/alpenlabs/moho", tag = "v0.1-alpha.7" }
moho-types = { git = "https://github.com/alpenlabs/moho", tag = "v0.1-alpha.7" }

# Dependencies from alpenlabs/strata-common
strata-btc-types = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-codec = { git = "https://github.com/alpenlabs/strata-common", features = [
  "derive",
], tag = "v0.1.0-alpha-rc23" }
strata-codec-utils = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-crypto = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-identifiers = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-l1-envelope-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-l1-txfmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-logging = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-merkle = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-msg-fmt = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-predicate = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-service = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-ssz-tests = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }
strata-tasks = { git = "https://github.com/alpenlabs/strata-common", tag = "v0.1.0-alpha-rc23" }

# dependencies from alpenlabs/ssz-gen
ssz = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_codegen = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_primitives = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
ssz_types = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
tree_hash = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }
tree_hash_derive = { git = "https://github.com/alpenlabs/ssz-gen", tag = "v0.16.0" }

# dependencies from alpenlabs/zkaleido
zkaleido = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.3", features = [
  "borsh",
  "remote-prover",
  "serde",
] }
zkaleido-logging = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.3" }
zkaleido-native-adapter = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.3", features = [
  "remote-prover",
] }
zkaleido-sp1-groth16-verifier = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.3" }
zkaleido-sp1-host = { git = "https://github.com/alpenlabs/zkaleido", tag = "v0.1-beta.3" }

sp1-sdk = "6.2.0"
sp1-verifier = "6.2.0"

bitcoin-bosd = { git = "https://github.com/alpenlabs/bitcoin-bosd", version = "0.11.0", tag = "v0.11.0", features = [
  "ssz",
] }

# external dependencies
anyhow = "1.0.86"
arbitrary = { version = "1.3.2", features = ["derive"] }
async-trait = "0.1.80"
bincode = "1.3.3"
bitcoin = { version = "0.32.6", features = ["serde"] }
bitcoind-async-client = { version = "0.10.8", default-features = false, features = [
  "30_2",
] }
bitvec = { version = "1.0.1", features = ["serde"] }
borsh = { version = "1.5.0", features = ["derive"] }
clap = { version = "4.5.20", features = ["cargo", "derive", "env"] }
corepc-node = { version = "0.12.0", features = ["30_2"] }
futures = "0.3.31"
hex = "0.4"
hex-literal = "1.1"
jsonrpsee = "0.26.0"
k256 = "0.13.4"
musig2 = { version = "0.1.0", features = ["serde"] }
proptest = "1.9.0"
rand = "0.8.5"
rand_chacha = { version = "0.9.0", default-features = false }
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
sha2 = "0.10"
sled = "0.34.7"
tempfile = "3.10.1"
thiserror = "2.0.11"
tokio = { version = "1.37", features = ["full"] }
toml = "1.1.0"
tracing = "0.1"
