[package]
edition = "2021"
name = "integration-tests"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
moho-runtime-impl.workspace = true
moho-runtime-interface.workspace = true
moho-types.workspace = true
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-manifest-types.workspace = true
strata-asm-params = { workspace = true, features = ["arbitrary"] }
strata-asm-proof-impl = { workspace = true, features = ["test-utils"] }
strata-asm-proto-admin.workspace = true
strata-asm-proto-admin-txs = { workspace = true, features = ["test-utils"] }
strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-bridge-v1-txs = { workspace = true, features = ["test-utils"] }
strata-asm-proto-bridge-v1-types = { workspace = true, features = [
  "arbitrary",
] }
strata-asm-proto-checkpoint.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-asm-spec.workspace = true
strata-asm-stf.workspace = true
strata-asm-worker = { workspace = true, features = ["test-utils"] }
strata-btc-types.workspace = true
strata-btc-verification.workspace = true
strata-codec.workspace = true
strata-codec-utils.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-l1-envelope-fmt.workspace = true
strata-l1-txfmt.workspace = true
strata-merkle.workspace = true
strata-predicate.workspace = true
strata-tasks.workspace = true
strata-test-utils-arb.workspace = true
strata-test-utils-btc.workspace = true
strata-test-utils-btcio.workspace = true
strata-test-utils-checkpoint.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
bitcoin-bosd.workspace = true
bitcoind-async-client.workspace = true
borsh.workspace = true
corepc-node.workspace = true
rand.workspace = true
rand_chacha.workspace = true
ssz.workspace = true
tokio.workspace = true

[dev-dependencies]

[lib]
name = "integration_tests"
path = "lib.rs"

[[test]]
name = "asm_core"
path = "asm/core.rs"

[[test]]
name = "asm_admin"
path = "asm/admin.rs"

[[test]]
name = "asm_bridge"
path = "asm/bridge.rs"

[[test]]
name = "asm_admin_to_checkpoint"
path = "asm/admin_to_checkpoint.rs"

[[test]]
name = "asm_checkpoint"
path = "asm/checkpoint.rs"

[[test]]
name = "asm_admin_to_bridge"
path = "asm/admin_to_bridge.rs"

[[test]]
name = "asm_bridge_to_checkpoint"
path = "asm/bridge_to_checkpoint.rs"

[[test]]
name = "asm_admin_to_stf"
path = "asm/admin_to_stf.rs"

[[test]]
name = "asm_admin_to_ee_stf"
path = "asm/admin_to_ee_stf.rs"
