[package]
name = "strata-asm-logs"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-codec.workspace = true
strata-codec-utils.workspace = true
strata-identifiers.workspace = true
strata-msg-fmt.workspace = true
strata-predicate.workspace = true

[dev-dependencies]
proptest.workspace = true
strata-asm-proto-checkpoint-types = { workspace = true, features = [
  "test-utils",
] }
strata-identifiers = { workspace = true, features = ["test-utils"] }
