[package]
name = "strata-asm-params"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-btc-types.workspace = true
strata-btc-verification.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-l1-txfmt.workspace = true
strata-predicate.workspace = true

arbitrary = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true }
bitcoin-bosd = { workspace = true, features = ["serde"] }
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[features]
arbitrary = [
  "dep:arbitrary",
  "dep:bitcoin",
  "bitcoin-bosd/arbitrary",
  "strata-predicate/arbitrary",
]
