[package]
name = "strata-asm-params"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-proto-bridge-v1-types.workspace = true
strata-btc-types.workspace = true
strata-btc-verification.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-l1-txfmt.workspace = true
strata-predicate = { workspace = true, features = ["serde"] }

arbitrary = { workspace = true, optional = true }
bitcoin = { workspace = true, optional = true }
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true

[dev-dependencies]
proptest.workspace = true
serde_json.workspace = true

[features]
arbitrary = [
  "dep:arbitrary",
  "dep:bitcoin",
  "strata-asm-proto-bridge-v1-types/arbitrary",
  "strata-predicate/arbitrary",
]
