[package]
edition = "2024"
name = "strata-asm-rpc"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
strata-asm-proof-types.workspace = true
strata-asm-proto-bridge-v1.workspace = true
strata-asm-proto-bridge-v1-types.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-asm-worker.workspace = true

bitcoin.workspace = true
jsonrpsee = { workspace = true, features = ["server", "macros"] }

[features]
default = []
client = ["jsonrpsee/client"]
