[package]
name = "asm-storage"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-worker.workspace = true
strata-identifiers.workspace = true
strata-merkle = { workspace = true, features = ["ssz"] }

anyhow.workspace = true
borsh.workspace = true
sled.workspace = true
ssz.workspace = true

[dev-dependencies]
tempfile.workspace = true
