[package]
name = "asm-storage"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-identifiers.workspace = true
strata-merkle = { workspace = true, features = ["ssz"] }
strata-merkle-node-store.workspace = true

anyhow.workspace = true
borsh.workspace = true
sled.workspace = true

[dev-dependencies]
tempfile.workspace = true
