[package]
name = "strata-asm-worker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-manifest-types.workspace = true
strata-asm-stf.workspace = true
strata-btc-types.workspace = true
strata-btc-verification.workspace = true
strata-identifiers.workspace = true
strata-merkle = { workspace = true, features = ["ssz"] }
strata-service.workspace = true
strata-tasks.workspace = true

anyhow.workspace = true
bitcoin.workspace = true
borsh.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-asm-spec.workspace = true
strata-test-utils-arb.workspace = true
strata-test-utils-btcio.workspace = true
strata-asm-params = { workspace = true, features = ["arbitrary"] }

bitcoind-async-client.workspace = true
corepc-node.workspace = true
tokio.workspace = true
