[package]
name = "strata-asm-worker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-stf.workspace = true
strata-btc-types.workspace = true
strata-btc-verification.workspace = true
strata-identifiers.workspace = true
strata-merkle = { workspace = true, features = ["ssz"] }
strata-service.workspace = true
strata-tasks.workspace = true

# Optional deps, enabled by the `test-utils` feature for `test_utils::TestAsmWorkerContext`.
bitcoind-async-client = { workspace = true, optional = true }
strata-merkle-node-store = { workspace = true, optional = true }

anyhow.workspace = true
bitcoin.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
# Exposes `test_utils` (the regtest-backed `TestAsmWorkerContext`) to downstream
# integration tests. The worker's own unit tests reach it via `cfg(test)`.
test-utils = ["dep:bitcoind-async-client", "dep:strata-merkle-node-store"]

[dev-dependencies]
strata-l1-txfmt.workspace = true
strata-test-utils-btcio.workspace = true

bitcoind-async-client.workspace = true
corepc-node.workspace = true
strata-merkle-node-store.workspace = true
