[package]
name = "strata-asm-sp1-guest-builder"
version = "0.1.0"
edition = "2021"

[features]
default = []
docker-build = []

[build-dependencies]
sp1-build = "6.2.0"
anyhow = { workspace = true }
borsh = { workspace = true }
serde_json = { workspace = true }
sp1-sdk = { workspace = true, features = ["blocking"] }
sp1-verifier = { workspace = true }
strata-predicate = { workspace = true }
zkaleido-sp1-groth16-verifier = { workspace = true }
