[package]
name = "strata-asm-moho-worker"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-proof-impl.workspace = true
strata-asm-worker.workspace = true
strata-identifiers.workspace = true
strata-predicate.workspace = true
strata-service.workspace = true
strata-tasks.workspace = true

moho-runtime-interface.workspace = true
moho-types = { workspace = true, features = ["serde"] }

anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
strata-asm-params = { workspace = true, features = ["arbitrary"] }
strata-asm-spec.workspace = true
strata-test-utils-arb.workspace = true
