[package]
name = "strata-asm-prover-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
strata-asm-prover-types.workspace = true
strata-identifiers.workspace = true

borsh.workspace = true
sled.workspace = true
zkaleido.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio.workspace = true

[lints]
workspace = true
