[package]
name = "strata-asm-proto-admin"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-params.workspace = true
strata-asm-proto-admin-txs.workspace = true
strata-asm-proto-bridge-v1-msgs.workspace = true
strata-asm-proto-bridge-v1-types.workspace = true
strata-asm-proto-checkpoint-msgs.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-predicate.workspace = true

arbitrary.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true

[dev-dependencies]
strata-asm-proto-admin-txs = { workspace = true, features = ["test-utils"] }
strata-asm-proto-bridge-v1-types = { workspace = true, features = [
  "arbitrary",
] }
strata-test-utils-arb.workspace = true
rand.workspace = true
bitcoin.workspace = true
