[package]
name = "strata-asm-proto-admin-txs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-params = { workspace = true, features = ["arbitrary"] }
strata-asm-proto-txs-test-utils = { workspace = true, optional = true }
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-l1-envelope-fmt.workspace = true
strata-l1-txfmt.workspace = true
strata-predicate = { workspace = true, features = ["arbitrary"] }

arbitrary.workspace = true
bitcoin.workspace = true
hex.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true

[features]
test-utils = ["strata-crypto/test-utils", "dep:strata-asm-proto-txs-test-utils"]

[dev-dependencies]
bitcoin.workspace = true
rand.workspace = true

strata-asm-proto-txs-test-utils.workspace = true
strata-test-utils-arb.workspace = true
