[package]
name = "strata-asm-proto-bridge-v1-msgs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
ssz.workspace = true
ssz_derive.workspace = true

strata-asm-common.workspace = true
strata-asm-proto-bridge-v1-txs.workspace = true
strata-asm-proto-bridge-v1-types.workspace = true
strata-crypto.workspace = true
