[package]
name = "strata-asm-proto-bridge-v1"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
arbitrary.workspace = true
bitcoin.workspace = true
bitcoin-bosd.workspace = true
rand_chacha.workspace = true
serde.workspace = true
ssz.workspace = true
ssz_derive.workspace = true
thiserror.workspace = true

strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-params.workspace = true
strata-asm-proto-bridge-v1-msgs.workspace = true
strata-asm-proto-bridge-v1-txs.workspace = true
strata-asm-proto-bridge-v1-types.workspace = true
strata-asm-proto-checkpoint-msgs.workspace = true
strata-btc-types.workspace = true
strata-codec.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true

[dev-dependencies]
bitcoin-bosd.workspace = true
strata-test-utils-arb.workspace = true
strata-asm-proto-bridge-v1-txs = { workspace = true, features = ["test-utils"] }
proptest.workspace = true
rand.workspace = true
