[package]
name = "strata-asm-proto-bridge-v1-txs"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
bitcoin-bosd.workspace = true
strata-asm-common.workspace = true
strata-asm-proto-bridge-v1-types.workspace = true
strata-btc-types.workspace = true
strata-codec.workspace = true
strata-l1-txfmt.workspace = true

arbitrary.workspace = true
bitcoin.workspace = true
strata-crypto.workspace = true
thiserror.workspace = true

# Optional dependencies for test utilities
rand = { workspace = true, optional = true }
strata-asm-proto-txs-test-utils = { workspace = true, optional = true }
strata-test-utils-btcio = { workspace = true, optional = true }

[dev-dependencies]
proptest.workspace = true
rand.workspace = true
strata-crypto = { workspace = true, features = ["test-utils"] }
strata-test-utils-arb.workspace = true

[features]
test-utils = [
  "dep:strata-asm-proto-txs-test-utils",
  "dep:strata-test-utils-btcio",
  "dep:rand",
  "strata-crypto/test-utils",
]
