[package]
name = "strata-asm-proto-checkpoint"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-common.workspace = true
strata-asm-logs.workspace = true
strata-asm-params.workspace = true
strata-asm-proto-bridge-v1-msgs.workspace = true
strata-asm-proto-checkpoint-msgs.workspace = true
strata-asm-proto-checkpoint-txs.workspace = true
strata-asm-proto-checkpoint-types.workspace = true
strata-checkpoint-verification.workspace = true
strata-identifiers.workspace = true
