[package]
name = "strata-checkpoint-verification"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
strata-asm-manifest-types.workspace = true
strata-asm-params.workspace = true
strata-asm-proto-bridge-v1-types.workspace = true
strata-asm-proto-checkpoint-types.workspace = true

bitcoin-bosd.workspace = true
strata-btc-types.workspace = true
strata-codec.workspace = true
strata-crypto.workspace = true
strata-identifiers.workspace = true
strata-predicate = { workspace = true, features = ["all"] }
zkaleido-logging.workspace = true

ssz.workspace = true
ssz_derive.workspace = true
ssz_primitives.workspace = true
ssz_types.workspace = true
thiserror.workspace = true
tree_hash.workspace = true
tree_hash_derive.workspace = true

[build-dependencies]
ssz_codegen.workspace = true

[dev-dependencies]
strata-test-utils-checkpoint.workspace = true
